[package]
name = "loom"
version = "0.0.1"
authors = [
    "Anatoly Yakovenko <aeyakovenko@gmail.com>"
]
license = "MIT"
documentation = "tbd"
keywords = ["blockchain"]
readme = "README.md"

[[bin]]
name = "spool"
path = "src/bin/spool.rs"

[[bin]]
name = "loom"
path = "src/bin/loom.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
getopts = "^0.2"
rust-crypto = "^0.2.36"
rand = "^0.4.2"
serde_json = "1.0"
serde = "*"
serde_derive = "*"
rpassword = "1.0.0"
mio = "^0.6.12"
