[package]
name = "loom"
version = "0.0.1"
authors = [
    "Anatoly Yakovenko <aeyakovenko@gmail.com>"
]
license = "APACHE-2.0"
documentation = "tbd"
keywords = ["blockchain"]
readme = "README.md"

[features]
unstable = []

[[bin]]
name = "loomd"
path = "src/bin/loomd.rs"

[[bin]]
name = "loom"
path = "src/bin/loom.rs"

[dependencies]
getopts = "^0.2"
rust-crypto = "^0.2.36"
rand = "^0.4.2"
serde_json = "^1.0"
serde = "^1.0"
serde_derive = "^1.0"
rpassword = "^1.0.0"
log = "^0.4.1"
data-encoding = "^2.1.1"
